--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">BleDemo</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_connect">ConnectActivity</string>
+    <string name="title_activity_lib_test">LibTestActivity</string>
 </resources>
