Update for new version

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_connect">ConnectActivity</string>
     <string name="title_activity_lib_test">LibTestActivity</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_operation">OperationActivity</string>
 </resources>
